# meds_testing_helpers

./: .pre-commit-config.yaml  CITATION.cff  CONTRIBUTORS.md  LICENSE  README.md  conftest.py  pyproject.toml
.github/workflows/: code-quality-main.yaml  code-quality-pr.yaml  python-build.yaml  tests.yaml
src/meds_sample_dataset_builder/: __init__.py  __main__.py  dataset_generator.py
src/meds_sample_dataset_builder/configs/dataset_spec/: default.yaml
src/meds_sample_dataset_builder/configs/dataset_spec/data_generator/: default.yaml
src/meds_testing_helpers/: __init__.py  __main__.py  dataset.py  dataset_generator.py  infer_dataset_config.py  pytest_plugin.py  rvs.py
src/meds_testing_helpers/configs/: generate_dataset.yaml  infer_dataset_config.yaml
src/meds_testing_helpers/configs/dataset_spec/data_generator/: default.yaml  sample.yaml
src/meds_testing_helpers/generate/: n_gram.py
src/meds_testing_helpers/static_sample_data/: __init__.py  simple_static_sharded_by_split_with_tasks.yaml
tests/: test_dataset_generator.py  test_static_datasets.py
