[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meds_sample_dataset_builder"
version = "0.0.1"
authors = [
  { name="Matthew McDermott", email="mattmcdermott8@gmail.com" },
]
description = "Builds sample MEDS datasets for testing."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Framework :: Pytest",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["annotated-types", "numpy", "hydra-core", "polars", "pytest", "meds==0.3.3", "pyarrow"]

[project.optional-dependencies]
dev = ["pre-commit<4"]
tests = ["pytest-cov"]

[project.scripts]
sample_MEDS_dataset = "meds_sample_dataset_builder.__main__:main"

[project.urls]
Homepage = "https://github.com/Medical-Event-Data-Standard/meds_sample_dataset_builder"
Issues = "https://github.com/Medical-Event-Data-Standard/meds_sample_dataset_builder/issues"

[tool.pytest.ini_options]
addopts = [
  "--color=yes",
  "--doctest-modules",
  "--ignore=docs",
]

[project.entry-points.pytest11]
meds_sample_dataset_builder = "meds_sample_dataset_builder.pytest_plugin"
